# nymph_lang

./: .gitignore  Cargo.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: FUNDING.yml
.github/workflows/: rust.yml  vscode.yml
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/ast/: declaration.rs  error.rs  expr.rs  mod.rs  ops.rs  types.rs
compiler/src/lexer/: mod.rs  token.rs
compiler/src/parser/: error.rs  mod.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/reference/: declarations.md  index.md  literals.md  types.md
extension/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
extension/syntaxes/: nymph.codeblock.json  nymph.tmLanguage.json
stdlib/src/: default.nym  option.nym  result.nym
stdlib/src/cmp/: comparison.nym  equality.nym
stdlib/src/collections/: tree.nym
stdlib/src/fmt/: to_string.nym
stdlib/src/iter/: mod.nym
stdlib/src/math/: complex.nym  mod.nym
stdlib/src/ops/: divide.nym  minus.nym  plus.nym  times.nym
