[package]
name = "nymph"
description = "A simple language that gets out of your way."
version = "0.1.0"
edition = "2024"
homepage = "https://nymphlang.dev/"
repository = "https://github.com/theonlytails/nymph_lang"
license = "MIT OR Apache-2.0"
authors = ["Shachar Zidon <theonlytails@theonlytails.com>"]
keywords = ["language", "programming-language", "parser", "lexer", "compiler"]
categories = ["compilers", "command-line-utilities", "parser-implementations"]

[dependencies]
anyhow = "1.0.98"
ariadne = "0.5.1"
chumsky = { version = "0.10.0", features = ["pratt", "memoization", "regex", "serde", "nightly"] }
clap = { version = "4.5.38", features = ["derive", "cargo"] }
itertools = "0.14.0"
ordered-float = "5.0.0"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
reedline = "0.40.0"
ecow = "0.2.4"
regex = "1.11.1"

[dev-dependencies]
test-case = "3.3.1"

[[bin]]
name = "nymph"
